# advent-of-code-2022

./: .gitignore  LICENSE  advent-of-code.cabal
app/: Main.hs
src/Days/: Day01.awk  Day01.hs  Day01.sh  Day02.hs  Day03.hs  Day04.hs
src/Util/: Util.hs
