cabal-version: 1.12

name:           advent-of-code
version:        2022.0
description:    Solutions to Advent of Code 2022 in Haskell
homepage:       https://github.com/Spaceface16518/advent-of-code-template#readme
bug-reports:    https://github.com/Spaceface16518/advent-of-code-template/issues
author:         Amrit Rathie
maintainer:     amrit.rathie@gmail.com
copyright:      2022 Amrit Rathie
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/Spaceface16518/advent-of-code-template

library
  exposed-modules:
      Days.Day01
      Days.Day02
      Days.Day03
      Days.Day04
      Days.Day05
      Days.Day06
      Days.Day07
      Days.Day08
      Days.Day09
      Days.Day10
      Days.Day11
      Days.Day12
      Days.Day13
      Days.Day14
      Days.Day15
      Days.Day16
      Days.Day17
      Days.Day18
      Days.Day19
      Days.Day20
      Days.Day21
      Days.Day22
      Days.Day23
      Days.Day24
      Days.Day25
      Program.Color
      Program.RunDay
      Util.Pair
      Util.Parsers
      Util.Util
  other-modules:
      Paths_advent_of_code
  hs-source-dirs:
      src
  default-extensions:
      LambdaCase
      MultiWayIf
      RecordWildCards
      OverloadedRecordDot
      OverloadedStrings
      GADTs
  build-depends:
      ansi-terminal
    , attoparsec
    , base >=4.7 && <5
    , containers
    , directory
    , mtl
    , optparse-applicative
    , parser-combinators
    , text
    , time
    , vector
    , split
  default-language: GHC2021

executable advent-of-code-exe
  main-is: Main.hs
  other-modules:
      Paths_advent_of_code
  hs-source-dirs:
      app
  default-extensions:
      LambdaCase
      MultiWayIf
      RecordWildCards
      OverloadedRecordDot
      OverloadedStrings
      GADTs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N4 -with-rtsopts=-qa -with-rtsopts=-C0 -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math -O2
  build-depends:
      ansi-terminal
    , advent-of-code
    , base >=4.7 && <5
    , containers
    , optparse-applicative
    , parser-combinators
  default-language: GHC2021
